python/test-data/testTypesSequence1.err
Traceback (most recent call last):
  File "test-data/testTypesSequence1.py", line 10, in <module>
    foo(1) # should fail
WyppTypeError: int is not a Sequence
given:    1
expected: value of type Sequence

context: foo(seq: Sequence) -> None
                  ^^^^^^^^
declared at: test-data/testTypesSequence1.py:3
caused by: test-data/testTypesSequence1.py:10
  | foo(1) # should fail
